5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1649_2442.log
== SUBMITION (2019-04-04 22:11:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.156345
-- ERROR:
  File "/home/codebench/codes/1649/2442/main.py", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 22:12:33) 
-- CODE:
num = input("Digite um numero: ")
if (num % 2 == 0)
	mensagem = "Par"
	print("par")
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.159896
-- ERROR:
  File "/home/codebench/codes/1649/2442/main.py", line 2
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 22:12:43) 
-- CODE:
num = input("Digite um numero: ")
if (num % 2 == 0)
	mensagem = "Par"
	print("par")
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.184898
-- ERROR:
  File "/home/codebench/codes/1649/2442/main.py", line 2
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 22:13:04) 
-- CODE:
num = input("Digite um numero: ")
if (num % 2 == 0)
	mensagem = "Par"
	print(mensagem)
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.171079
-- ERROR:
  File "/home/codebench/codes/1649/2442/main.py", line 2
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 22:13:08) 
-- CODE:
num = input("Digite um numero: ")
if (num % 2 == 0)
	mensagem = "Par"
	print(mensagem)
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 2
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 22:50:14) 
-- CODE:
num=int(input("Digite um numero:   "))
if (num % 2 == 0)
	mensagem = "Par"
	print(mensagem)
else
	mensagem = "Impar"

print(mensagem)

-- EXECUTION TIME:
0.141404
-- ERROR:
  File "/home/codebench/codes/1649/2442/main.py", line 2
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:51:37) 
-- CODE:
num=int(input("Digite um numero:   "))
if (num % 2 == 0)
	mensagem = "Par"
	print(mensagem)
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 2
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:52:18) 
-- CODE:
num=int(input("Digite um numero:   "))
if(num%2==0)
	mensagem="Par"
	print(mensagem)
else
	mensagem="Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 2
    if(num%2==0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:53:50) 
-- CODE:
num=int(input("Digite um numero:   "))
if (num%2==0)
	mensagem="Par"
	print(mensagem)
else
	mensagem="Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 2
    if (num%2==0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:57:12) 
-- CODE:
num=int(input("Digite um numero:   "))
if (num%2==0)
	mensagem="Par"
	print(mensagem)
else
	mensagem="Impar
print(mensagem)

-- ERROR:
File "XXXX", line 2
    if (num%2==0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 22:58:00) 
-- CODE:
num=int(input("Digite um numero:   "))
	mensagem="Par"
	print(mensagem)
else
	mensagem="Impar
print(mensagem)

-- ERROR:
File "XXXX", line 2
    mensagem="Par"
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:00:01) 
-- CODE:
x=int(input("digite um numero:   "))
if x%2 =0
	print(x)
-- ERROR:
File "XXXX", line 2
    if x%2 =0
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:00:20) 
-- CODE:
x=int(input("digite um numero:   "))
if x%2 =0
	print(x)
-- ERROR:
File "XXXX", line 2
    if x%2 =0
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:00:30) 
-- CODE:
x=int(input("digite um numero:   "))
if x%2=0
	print(x)
-- ERROR:
File "XXXX", line 2
    if x%2=0
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:00:51) 
-- CODE:
x=int(input("digite um numero:   "))
if(x%2==0)
	print(x)
-- ERROR:
File "XXXX", line 2
    if(x%2==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 23:16:13) 
-- CODE:
x=int(input("digite um numero:   "))
if(x%2==0):
	print(x)
-- ERROR:
File "XXXX", line 2
    if(x%2==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 23:16:53) 
-- CODE:
x=int(input("digite um numero:   "))
if(x%2==0):
	print("par")
else:
	print("impar")
-- EXECUTION TIME:
0.137121
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
